--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,1 +1,99 @@
+$primary: #ee6c4d;
+$secondary: #98c1d9;
+
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import 'variables';
+
+
+body {
+  // background-color: $secondary;
+  height: 100vh;
+  background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
+  background-size:cover;
+  background-repeat: no-repeat;
+  
+}
+.everything{
+  
+  color: antiquewhite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ss-form{
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  width: 18rem;
+}
+.tictactoeboard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card{
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 600px
+}
+.box {
+  margin: auto;
+  align-items: center;
+  background-color: lightgrey;
+  border: 1px solid white;
+  color: white;
+  flex-wrap: wrap;
+  display: flex;
+  font-family: $accent-font-family;
+  justify-content: center;
+  height: 200px;
+  
+}
+.b-out {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+h1, h2 {
+  font-family: $accent-font-family;
+  margin-bottom: auto;
+  align-items: center;
+  text-align: center;
+}
+
+.alt-color {
+  background-color: $secondary;
+}
+.searchBar{
+  align-content: flex-end;
+}
+$black: #000;
+
+.border {
+  border: 3px solid $black;
+  margin: 20px;
+  padding: 20px;
+}
+.game-buttons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#after-sign-in{
+  display: none;
+}
