--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -9,7 +9,7 @@ $secondary: #98c1d9;
 body {
   // background-color: $secondary;
   height: 100vh;
-  background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
+  // background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
   background-size:cover;
   background-repeat: no-repeat;
   
@@ -27,20 +27,33 @@ body {
   flex-wrap: wrap;
   align-items: center;
   text-align: center;
-  width: 18rem;
+  width: 24rem;
+}
+input{
+  // margin-top: 5px;
+  // margin-bottom: 5px;
+  margin: 5px;
+  border-radius: 15px;
+}
+.col-4{
+  font-size: 100px;
 }
 .tictactoeboard{
+  margin: 0rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .card{
-  background-color: #000;
+  margin: 80px;
+  background-color: #354f52;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 100px;
 }
 .container{
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -48,18 +61,18 @@ body {
   width: 600px
 }
 .box {
-  margin: auto;
   align-items: center;
-  background-color: lightgrey;
-  border: 1px solid white;
+  // background-color: lightgrey;
+  border: 2px solid black;
   color: white;
   flex-wrap: wrap;
   display: flex;
   font-family: $accent-font-family;
   justify-content: center;
-  height: 200px;
-  
+  height: 150px;
+  width: 150px;
 }
+
 .b-out {
   margin: 10px;
   display: flex;
@@ -84,10 +97,12 @@ h1, h2 {
 $black: #000;
 
 .border {
-  border: 3px solid $black;
+  
   margin: 20px;
   padding: 20px;
+  border: none !important;
 }
+
 .game-buttons{
   display: flex;
   align-items: center;
