completed nav bar with functions

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -9,7 +9,7 @@ $secondary: #98c1d9;
 body {
   // background-color: $secondary;
   height: 100vh;
-  // background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
+  background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
   background-size:cover;
   background-repeat: no-repeat;
   
