--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -5,10 +5,22 @@ $secondary: #98c1d9;
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import 'variables';
 
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+}
 
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+}
 body {
   // background-color: $secondary;
-  height: 100vh;
+  height: 130vh;
   background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
   background-size:cover;
   background-repeat: no-repeat;
@@ -44,13 +56,22 @@ input{
   justify-content: center;
   align-items: center;
 }
-.card{
+#front-card{
   margin: 80px;
   background-color: #354f52;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100px;
+}
+#board-card{
+    margin-bottom: 40px;
+    margin-top: 200px;
+    background-color: #354f52;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
 }
 .container{
   margin: 20px;
@@ -88,6 +109,13 @@ h1, h2 {
   align-items: center;
   text-align: center;
 }
+#display-result{
+  font-family: $accent-font-family;
+  margin-bottom: auto;
+  align-items: center;
+  text-align: center;
+  font-size: xx-large;
+}
 
 .alt-color {
   background-color: $secondary;
@@ -109,6 +137,15 @@ $black: #000;
   align-items: center;
   justify-content: center;
 }
+.button-style{
+  font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border-radius: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 
 #after-sign-in{
   display: none;
