--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,6 +4,7 @@ $secondary: #98c1d9;
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import 'variables';
+@import '../../lib/background-stuff/Background\ -\ 25552.mp4';
 
 @media screen 
   and (min-device-width: 1200px) 
@@ -144,6 +145,13 @@ $black: #000;
     border-radius: 15px;
     margin-left: 15px;
     margin-right: 15px;
+}
+.video{
+  position: absolute;
+  left: 0;
+  top: 0;
+  object-fit: cover;
+  z-index: -1;
 }
 
 
