--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,5 +1,5 @@
-$primary: #ee6c4d;
-$secondary: #98c1d9;
+$primary:  #354f52;
+$secondary: white;
 
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
@@ -18,15 +18,24 @@ $secondary: #98c1d9;
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
-}
-body {
-  // background-color: $secondary;
-  height: 130vh;
-  background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
-  background-size:cover;
-  background-repeat: no-repeat;
+  }
+  video{
+    position: absolute;
+    left: 0;
+    top: 0;
+    object-fit: cover;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+  }
+// body {
+//   // background-color: $secondary;
+//   height: 130vh;
+//   background-image: url('https://besthqwallpapers.com/Uploads/29-1-2020/120132/thumb2-4k-fire-textures-burning-backgrounds-fireplace-bonfire.jpg');
+//   background-size:cover;
+//   background-repeat: no-repeat;
   
-}
+// }
 .everything{
   
   color: antiquewhite;
@@ -52,7 +61,7 @@ input{
   font-size: 100px;
 }
 .tictactoeboard{
-  margin: 0rem;
+  margin: 0 ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,7 +76,7 @@ input{
 }
 #board-card{
     margin-bottom: 40px;
-    margin-top: 200px;
+    margin-top: 150px;
     background-color: #354f52;
     display: flex;
     justify-content: center;
@@ -75,7 +84,7 @@ input{
     border-radius: 100px;
 }
 .container{
-  margin: 20px;
+  margin: 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -119,12 +128,12 @@ h1, h2 {
 }
 
 .alt-color {
-  background-color: $secondary;
+  background-color: black;
 }
 .searchBar{
   align-content: flex-end;
 }
-$black: #000;
+
 
 .border {
   
@@ -146,13 +155,7 @@ $black: #000;
     margin-left: 15px;
     margin-right: 15px;
 }
-.video{
-  position: absolute;
-  left: 0;
-  top: 0;
-  object-fit: cover;
-  z-index: -1;
-}
+
 
 
 #after-sign-in{
