changed to public

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,7 +4,7 @@ $secondary: white;
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import 'variables';
-@import '../../lib/background-stuff/Background\ -\ 25552.mp4';
+@import '../../public/Background\ -\ 25552.mp4';
 
 @media screen 
   and (min-device-width: 1200px) 
