added audio controls

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -27,8 +27,10 @@ $secondary: white;
     z-index: -1;
     height: 100%;
     width: 100%;
-    
-    
+  }
+  .myAudio{
+    background: $primary;
+    background-color: #354f52;
   }
 // body {
 //   // background-color: $secondary;
