--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -32,7 +32,7 @@ $secondary: white;
 body {
   // background-color: $secondary;
 
-  background-image: url('https://acegif.com/wp-content/gifs/fire-17.gif');
+  background-image: url('https://64.media.tumblr.com/d688513ff7cb24879bcb07117aa67744/320a3e399d7852f4-f1/s512x350/74b9c77e8c76089bbe0f0629d776386eb6364182.gif');
   background-size:cover;
   background-repeat: no-repeat;
   
